--- a/Dalk/Android/app/build.gradle
+++ b/Dalk/Android/app/build.gradle
@@ -1,26 +1,82 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.model.application'
 
-android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+model {
+    android {
+        compileSdkVersion = 24
+        buildToolsVersion = "24.0.0"
+        ndk {
+            moduleName = "native"
+//            toolchain  'clang'
+            stl 'gnustl_shared'
+            cppFlags.addAll(['-std=c++11','-Wall'])
+            cppFlags.addAll("-fexceptions")
+            ldLibs.addAll(['log', 'GLESv2'])
+        }
 
-    defaultConfig {
-        applicationId "com.cyberneticcute.may_clearblue.dalk"
-        minSdkVersion 19
-        targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        defaultConfig.with {
+            applicationId = "com.CyberneticCute.Dalk"
+            minSdkVersion.apiLevel = 15
+            targetSdkVersion.apiLevel = 22
+            versionCode = 1
+            versionName = "1.0"
+        }
+
+        buildTypes {
+            release {
+                minifyEnabled = false
+                proguardFiles.add(file("proguard-rules.pro"))
+            }
+        }
+
+        productFlavors {
+            create("arm") {
+//                applicationId = "com.cybernetic-cute.dalk"
+                ndk {
+                    abiFilters.add("armeabi-v7a")
+                }
+            }
+/*
+            create("arm") {
+                ndk.abiFilters += "armeabi"
+            }
+            create("arm7") {
+                ndk.abiFilters += "armeabi-v7a"
+            }
+            create("arm8") {
+                ndk.abiFilters += "arm64-v8a"
+            }
+            create("x86") {
+                ndk.abiFilters += "x86"
+            }
+            create("x86-64") {
+                ndk.abiFilters += "x86_64"
+            }
+            create("mips") {
+                ndk.abiFilters += "mips"
+            }
+            create("mips-64") {
+                ndk.abiFilters += "mips64"
+            }
+            // To include all cpu architectures, leaves abiFilters empty
+            create("all")
+*/
+        }
+
+        // Configures source set directory.
+        sources {
+            main {
+                java {
+                    source {
+                        srcDir "src"
+                    }
+                }
+            }
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
 }
