--- a/Dalk/VisualStudio/2017/Dalk/Dalk/Dalk.vcxproj
+++ b/Dalk/VisualStudio/2017/Dalk/Dalk/Dalk.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -22,32 +22,32 @@
     <ProjectGuid>{85B239E2-BFA2-4C4C-8DBE-144C900B6496}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Dalk</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>false</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <WholeProgramOptimization>false</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
@@ -94,7 +94,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;_DALK_USE_XAUDIO_;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
@@ -114,7 +114,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;_DALK_USE_XAUDIO_;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
     </ClCompile>
     <Link>
@@ -136,7 +136,7 @@
       <PreprocessorDefinitions>_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;_DALK_USE_XAUDIO_;WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>
       </SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
       <DebugInformationFormat>None</DebugInformationFormat>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
@@ -165,7 +165,7 @@
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;_DALK_USE_XAUDIO_;WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>
       </SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
       <DebugInformationFormat>None</DebugInformationFormat>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
@@ -184,7 +184,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\External\babel\babel.h" />
     <ClInclude Include="..\..\..\..\Dalk.h" />
     <ClInclude Include="..\..\..\BootLoader.h" />
   </ItemGroup>
@@ -192,12 +191,6 @@
     <ResourceCompile Include="..\..\..\Dalk.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\External\babel\babel.cpp">
-      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</SDLCheck>
-      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</SDLCheck>
-      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">false</SDLCheck>
-      <SDLCheck Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</SDLCheck>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\Dalk.cpp" />
     <ClCompile Include="..\..\..\BootLoader.cpp" />
   </ItemGroup>
