--- a/Dalk/VisualStudio/2017/Ellison/Ellison/Ellison.vcxproj
+++ b/Dalk/VisualStudio/2017/Ellison/Ellison/Ellison.vcxproj
@@ -90,7 +90,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;_DALK_WINDOWS_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include;$(ProjectDir)../../../../../../External/lpng1634</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -108,7 +108,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;_DALK_WINDOWS_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
@@ -127,7 +127,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include;$(ProjectDir)../../../../../../External/lpng1634</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
       <SDLCheck>
       </SDLCheck>
@@ -154,7 +154,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
       <SDLCheck>
       </SDLCheck>
