--- a/Dalk/VisualStudio/2017/Rimlia/Rimlia/Rimlia.vcxproj
+++ b/Dalk/VisualStudio/2017/Rimlia/Rimlia/Rimlia.vcxproj
@@ -161,7 +161,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DALK_WINDOWS_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>MultiStdAfx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
       <SDLCheck>false</SDLCheck>
     </ClCompile>
     <Link>
@@ -179,7 +179,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeaderFile>MultiStdAfx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
       <SDLCheck>false</SDLCheck>
     </ClCompile>
     <Link>
@@ -198,7 +198,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_DALK_WINDOWS_;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdAfx.h</PrecompiledHeaderFile>
       <SDLCheck>
       </SDLCheck>
@@ -225,7 +225,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
       <PrecompiledHeaderFile>MultiStdAfx.h</PrecompiledHeaderFile>
       <SDLCheck>
       </SDLCheck>
