--- a/Dalk/VisualStudio/2017/Siglune/Siglune/Siglune.vcxproj
+++ b/Dalk/VisualStudio/2017/Siglune/Siglune/Siglune.vcxproj
@@ -91,7 +91,7 @@
       <PreprocessorDefinitions>_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -109,7 +109,7 @@
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;_DALK_USE_DIRECT3D_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -130,7 +130,7 @@
       <SDLCheck>
       </SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -157,7 +157,7 @@
       <SDLCheck>
       </SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include;$(ProjectDir)../../../../../../External/eigen</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <InlineFunctionExpansion>Disabled</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
