--- a/Dalk/VisualStudio/2017/Rinse/Rinse/Rinse.vcxproj
+++ b/Dalk/VisualStudio/2017/Rinse/Rinse/Rinse.vcxproj
@@ -87,7 +87,7 @@
       <PreprocessorDefinitions>_DALK_WINDOWS_;_DALK_USE_XAUDIO_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -105,7 +105,7 @@
       <PreprocessorDefinitions>_WIN64;_DALK_WINDOWS_;_DALK_USE_XAUDIO_;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -126,7 +126,7 @@
       <SDLCheck>
       </SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -153,7 +153,7 @@
       <SDLCheck>
       </SDLCheck>
       <PrecompiledHeaderFile>MultiStdafx.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.2/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.5/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)../../../../../;$(ProjectDir)../../../../../../External;$(ProjectDir)../../../../../../External/sqrat-0.9.2/include;$(ProjectDir)../../../../../../External/squirrel/include;$(ProjectDir)../../../../../../External/libogg-1.3.3/include;$(ProjectDir)../../../../../../External/libvorbis-1.3.6/include;$(ProjectDir)../../../../../../External/zlib-1.2.11;$(ProjectDir)../../../../../../External/lpng1634;$(ProjectDir)../../../../../../External/opus-1.2.1/include</AdditionalIncludeDirectories>
       <DebugInformationFormat>None</DebugInformationFormat>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
